--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "js-cookie": "2.2.0",
     "jsencrypt": "^3.2.1",
     "jsonlint": "^1.6.3",
+    "mqtt": "^4.3.7",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "ol": "^6.9.0",
