--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,13 +22,18 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Get the latest tag of Docker image
-        id: latest_tag
-        run: echo "::set-output name=version::$(docker images ${DOCKER_USERNAME}/pangu-ui --format '{{.Tag}}' | sort -V | tail -n1)"
+      - name: Generate version number
+        id: version
+        uses: docker/metadata-action@v3
+        with:
+          images: chengliang4810/pangu-ui:latest
+          tags: |
+            ${{ github.sha }}
+            ${{ github.sha }}-${{ github.run_number }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: chengliang4810/pangu-ui:${{ steps.latest_tag.outputs.version + 1 }}
+          tags: chengliang4810/pangu-ui:${{ steps.version.outputs.version }}
