--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,6 +12,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Install dependencies and build
+        run: |
+          npm install
+          pnpm run build
+
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
