--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,6 +12,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up Node.js environment
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14.x'
+
       - name: Install dependencies and build
         run: |
           npm install -g pnpm
@@ -28,18 +33,15 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Generate version number
-        id: version
-        uses: docker/metadata-action@v3
-        with:
-          images: chengliang4810/pangu-ui:latest
-          tags: |
-            ${{ github.sha }}
-            ${{ github.sha }}-${{ github.run_number }}
+      - name: Get version from package.json
+        id: get_version
+        run: echo "::set-output name=version::$(node -p 'require(\\"./package.json\\").version')"
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: chengliang4810/pangu-ui:${{ steps.version.outputs.version }}
+          tags:
+            chengliang4810/pangu-ui:${{ steps.version.outputs.version }}
+            chengliang4810/pangu-ui:latest
