--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -42,6 +42,6 @@ jobs:
         with:
           context: .
           push: true
-          tags:
+          tags: |
             chengliang4810/pangu-ui:${{ steps.version.outputs.version }}
             chengliang4810/pangu-ui:latest
