--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -42,7 +42,9 @@ jobs:
         with:
           context: .
           push: true
-          tags:
-            ${{ secrets.DOCKER_USERNAME }}/pangu-ui:${{ steps.version.outputs.version }}
+          tags: [
+            ${{ secrets.DOCKER_USERNAME }}/pangu-ui:${{ steps.version.outputs.version }},
             ${{ secrets.DOCKER_USERNAME }}/pangu-ui:latest
+      ]
+
 
