--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,7 +34,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Get version from package.json
-        id: get_version
+        id: version
         run: echo "::set-output name=version::$(node -e "(function () { console.log(require('./package.json').version) })()")"
 
       - name: Build and push Docker image
