--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,13 +13,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Node.js environment
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '14.x'
-
+          node-version: '16.x'
+          cache: 'pnpm'
       - name: Install dependencies and build
         run: |
-          npm install -g pnpm
           pnpm install
           pnpm run build
 
@@ -43,6 +42,4 @@ jobs:
           context: .
           push: true
           tags:  ${{ secrets.DOCKER_USERNAME }}/pangu-ui:${{ steps.version.outputs.version }},${{ secrets.DOCKER_USERNAME }}/pangu-ui:latest
-
-
 
