--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,13 +16,12 @@ jobs:
       - uses: pnpm/action-setup@v2
         with:
           version: 6.32.9
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
+          node-version: '14'
           cache: 'pnpm'
-        run: |
-          pnpm install
-          pnpm run build
+      - run: pnpm install
+      - run: pnpm run build
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
