--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,8 +20,9 @@ jobs:
         with:
           node-version: '14'
           cache: 'pnpm'
-      - run: pnpm install
-      - run: pnpm run build
+        run: |
+          pnpm install
+          pnpm run build
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
