--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,14 +12,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install dependencies and build
+      - name: Set up Node.js environment
       - uses: pnpm/action-setup@v2
         with:
           version: 6.32.9
-      - uses: actions/setup-node@v3
+        uses: actions/setup-node@v2
         with:
-          node-version: '14'
-          cache: 'pnpm'
+          node-version: '14.x'
+          cache: "pnpm"
+
+      - name: Install dependencies and build
         run: |
           pnpm install
           pnpm run build
@@ -44,4 +46,5 @@ jobs:
           context: .
           push: true
           tags:  ${{ secrets.DOCKER_USERNAME }}/pangu-ui:${{ steps.version.outputs.version }},${{ secrets.DOCKER_USERNAME }}/pangu-ui:latest
+
 
