--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,13 +13,14 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Node.js environment
-      - uses: pnpm/action-setup@v2
-        with:
-          version: 6.32.9
         uses: actions/setup-node@v2
         with:
           node-version: '14.x'
           cache: "pnpm"
+        uses: pnpm/action-setup@v2
+        with:
+          version: 6.32.9
+          run_install: true
 
       - name: Install dependencies and build
         run: |
