--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,15 +16,11 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14.x'
-          cache: "pnpm"
-      - name: Set up pnpm environment
-        uses: pnpm/action-setup@v2
-        with:
-          version: 6.32.9
-          run_install: true
+          cache: "npm"
 
       - name: Install dependencies and build
         run: |
+          npm install -g pnpm
           pnpm install
           pnpm run build
 
