--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14.x'
-          cache: "npm"
+          cache: "pnpm"
 
       - name: Install dependencies and build
         run: |
