--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,10 @@ jobs:
         with:
           node-version: '14.x'
           cache: "pnpm"
+      - name: pnpm environment
+        uses: pnpm/action-setup@v2
+        with:
+          version: 6.0.2
 
       - name: Install dependencies and build
         run: |
