--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,19 +12,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Node.js environment
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14.x'
-          cache: "pnpm"
-      - name: pnpm environment
-        uses: pnpm/action-setup@v2
+      - name: pnpm cache action
+        uses: pnpm/action-setup@v2.2.4
         with:
           version: 6.0.2
 
+      - name: Set up Node.js environment
+        uses: actions/setup-node@v3.6.0
+        with:
+          node-version: '16.x'
+          cache: "pnpm"
+
+
       - name: Install dependencies and build
         run: |
-          npm install -g pnpm
           pnpm install
           pnpm run build
 
