--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,20 +13,19 @@ jobs:
         uses: actions/checkout@v2
 
       - name: pnpm cache action
-        uses: pnpm/action-setup@v2.2.4
+        uses: pnpm/action-setup@v2
         with:
           version: 7.30.0
 
       - name: Set up Node.js environment
-        uses: actions/setup-node@v3.6.0
+        uses: actions/setup-node@v3
         with:
           node-version: '16.x'
           cache: "pnpm"
 
-
       - name: Install dependencies and build
         run: |
-          pnpm install
+          pnpm install --frozen-lockfile
           pnpm run build
 
       - name: Login to Docker Hub
